# Game

./: game.py  my_resource.pyxres  pyproject.toml  requirements.txt
src/project/: config.py  main.py  pi_main.py  win_main.py
src/project/Application/: App.py  game_controller.py
src/project/Assets/Map/: stage1.txt
src/project/Domain/: game_state.py
src/project/Game/: player.py  stageobject.py
src/project/Renderer/: StageObject.py  game_renderer.py  renderer_manager.py  stage_renderer.py  touch_renderer.py  ui_renderer.py
src/project/Screen/: Coordinates.py  Display.py  Touch.py  fb.py  input.py  stagedrow.py
src/project/System/: App.py  Textreader.py  fb.py  input.py  map_updata.py  player_system.py  progress_system.py  system_manager.py
src/project/System/health/: health_system.py
src/project/display/: display_manager.py  fb.py  pygame_display.py
src/project/domein/: state.py
src/project/input/: coord_converter.py  device_input.py  input_action.py  input_manager.py  pygame_input.py
tests/: app.py  display.py  game_controller.py  renderer.py
