[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "kurage-330",email = "linxiaocou80@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame-ce (>=2.5.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
